[gd_scene load_steps=3 format=3 uid="uid://nelr0rw0cn6o"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/PauseMenu.gd" id="1_mpl1k"]
[ext_resource type="Theme" uid="uid://c52weqjysclu7" path="res://Effects/font_theme.tres" id="1_tt71g"]

[node name="PauseMenu" type="PanelContainer"]
process_mode = 3
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_mpl1k")
mainMenuScenePath = "res://Rooms/main_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tt71g")
theme_override_colors/default_color = Color(0.909804, 0.756863, 0.439216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "[center]PAUSED[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 245
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 245

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tt71g")
text = "Resume"

[node name="RetryButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tt71g")
text = "Retry Room"

[node name="RestartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tt71g")
text = "Restart Chapter"

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tt71g")
text = "Return to Title"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
